// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Ruler  > 'renders correct amount of ticks' 1`] = `
<DocumentFragment>
  <rect
    class="fill-none"
    height="16"
    width="500"
  />
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="24"
      x2="24"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="24"
      y="0"
    >
      0
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="47"
      x2="47"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="47"
      y="0"
    >
      1
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="70"
      x2="70"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="70"
      y="0"
    >
      2
    </text>
  </g>
</DocumentFragment>
`;

exports[`Ruler  > 'renders correct amount of ticks' 2`] = `
<DocumentFragment>
  <rect
    class="fill-none"
    height="16"
    width="500"
  />
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="24"
      x2="24"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="24"
      y="0"
    >
      0
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="47"
      x2="47"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="70"
      x2="70"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="93"
      x2="93"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="116"
      x2="116"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="139"
      x2="139"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="162"
      x2="162"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="185"
      x2="185"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="208"
      x2="208"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="231"
      x2="231"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="254"
      x2="254"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="254"
      y="0"
    >
      10
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="277"
      x2="277"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="300"
      x2="300"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="323"
      x2="323"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="346"
      x2="346"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="369"
      x2="369"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="392"
      x2="392"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="415"
      x2="415"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="438"
      x2="438"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="461"
      x2="461"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="484"
      x2="484"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="484"
      y="0"
    >
      20
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="507"
      x2="507"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="530"
      x2="530"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="553"
      x2="553"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="576"
      x2="576"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="599"
      x2="599"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="622"
      x2="622"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="645"
      x2="645"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="668"
      x2="668"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="691"
      x2="691"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="714"
      x2="714"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="714"
      y="0"
    >
      30
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="737"
      x2="737"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="760"
      x2="760"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="783"
      x2="783"
      y1="0"
      y2="6"
    />
  </g>
</DocumentFragment>
`;

exports[`Ruler  > 'renders horizontal ruler' 1`] = `
<DocumentFragment>
  <rect
    class="fill-none"
    height="16"
    width="500"
  />
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="24"
      x2="24"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="24"
      y="0"
    >
      0
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="47"
      x2="47"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="70"
      x2="70"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="93"
      x2="93"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="116"
      x2="116"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="139"
      x2="139"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="162"
      x2="162"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="185"
      x2="185"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="208"
      x2="208"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="231"
      x2="231"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="254"
      x2="254"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="277"
      x2="277"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="300"
      x2="300"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="323"
      x2="323"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="346"
      x2="346"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="369"
      x2="369"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="392"
      x2="392"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="415"
      x2="415"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="438"
      x2="438"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="461"
      x2="461"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="484"
      x2="484"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="507"
      x2="507"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="530"
      x2="530"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="553"
      x2="553"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="576"
      x2="576"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="599"
      x2="599"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="622"
      x2="622"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="645"
      x2="645"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="668"
      x2="668"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="691"
      x2="691"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="714"
      x2="714"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="737"
      x2="737"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="760"
      x2="760"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="783"
      x2="783"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="806"
      x2="806"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="829"
      x2="829"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="852"
      x2="852"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="875"
      x2="875"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="898"
      x2="898"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="921"
      x2="921"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="944"
      x2="944"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="967"
      x2="967"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="990"
      x2="990"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1013"
      x2="1013"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1036"
      x2="1036"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1059"
      x2="1059"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1082"
      x2="1082"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1105"
      x2="1105"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1128"
      x2="1128"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1151"
      x2="1151"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1174"
      x2="1174"
      y1="0"
      y2="16"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="8"
      dy="4"
      text-anchor="start"
      x="1174"
      y="0"
    >
      50
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1197"
      x2="1197"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1220"
      x2="1220"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1243"
      x2="1243"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1266"
      x2="1266"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1289"
      x2="1289"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1312"
      x2="1312"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1335"
      x2="1335"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1358"
      x2="1358"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1381"
      x2="1381"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1404"
      x2="1404"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1427"
      x2="1427"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1450"
      x2="1450"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1473"
      x2="1473"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1496"
      x2="1496"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1519"
      x2="1519"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1542"
      x2="1542"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1565"
      x2="1565"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1588"
      x2="1588"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1611"
      x2="1611"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1634"
      x2="1634"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1657"
      x2="1657"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1680"
      x2="1680"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1703"
      x2="1703"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1726"
      x2="1726"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1749"
      x2="1749"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1772"
      x2="1772"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1795"
      x2="1795"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1818"
      x2="1818"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1841"
      x2="1841"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1864"
      x2="1864"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1887"
      x2="1887"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1910"
      x2="1910"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1933"
      x2="1933"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1956"
      x2="1956"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="1979"
      x2="1979"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2002"
      x2="2002"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2025"
      x2="2025"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2048"
      x2="2048"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2071"
      x2="2071"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2094"
      x2="2094"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2117"
      x2="2117"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2140"
      x2="2140"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2163"
      x2="2163"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2186"
      x2="2186"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2209"
      x2="2209"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2232"
      x2="2232"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2255"
      x2="2255"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2278"
      x2="2278"
      y1="0"
      y2="6"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="2301"
      x2="2301"
      y1="0"
      y2="6"
    />
  </g>
</DocumentFragment>
`;

exports[`Ruler  > 'renders vertical ruler' 1`] = `
<DocumentFragment>
  <rect
    class="fill-none"
    height="500"
    width="16"
  />
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="16"
      y1="24"
      y2="24"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="4"
      dy="8"
      text-anchor="start"
      x="0"
      y="24"
    >
      0
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="47"
      y2="47"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="70"
      y2="70"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="93"
      y2="93"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="116"
      y2="116"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="139"
      y2="139"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="162"
      y2="162"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="185"
      y2="185"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="208"
      y2="208"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="231"
      y2="231"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="254"
      y2="254"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="277"
      y2="277"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="300"
      y2="300"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="323"
      y2="323"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="346"
      y2="346"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="369"
      y2="369"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="392"
      y2="392"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="415"
      y2="415"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="438"
      y2="438"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="461"
      y2="461"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="484"
      y2="484"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="507"
      y2="507"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="530"
      y2="530"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="553"
      y2="553"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="576"
      y2="576"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="599"
      y2="599"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="622"
      y2="622"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="645"
      y2="645"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="668"
      y2="668"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="691"
      y2="691"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="714"
      y2="714"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="737"
      y2="737"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="760"
      y2="760"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="783"
      y2="783"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="806"
      y2="806"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="829"
      y2="829"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="852"
      y2="852"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="875"
      y2="875"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="898"
      y2="898"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="921"
      y2="921"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="944"
      y2="944"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="967"
      y2="967"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="990"
      y2="990"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1013"
      y2="1013"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1036"
      y2="1036"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1059"
      y2="1059"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1082"
      y2="1082"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1105"
      y2="1105"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1128"
      y2="1128"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1151"
      y2="1151"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="16"
      y1="1174"
      y2="1174"
    />
    <text
      class="text-sm fill-slate-100"
      dominant-baseline="hanging"
      dx="4"
      dy="8"
      text-anchor="start"
      x="0"
      y="1174"
    >
      50
    </text>
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1197"
      y2="1197"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1220"
      y2="1220"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1243"
      y2="1243"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1266"
      y2="1266"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1289"
      y2="1289"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1312"
      y2="1312"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1335"
      y2="1335"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1358"
      y2="1358"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1381"
      y2="1381"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1404"
      y2="1404"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1427"
      y2="1427"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1450"
      y2="1450"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1473"
      y2="1473"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1496"
      y2="1496"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1519"
      y2="1519"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1542"
      y2="1542"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1565"
      y2="1565"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1588"
      y2="1588"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1611"
      y2="1611"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1634"
      y2="1634"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1657"
      y2="1657"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1680"
      y2="1680"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1703"
      y2="1703"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1726"
      y2="1726"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1749"
      y2="1749"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1772"
      y2="1772"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1795"
      y2="1795"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1818"
      y2="1818"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1841"
      y2="1841"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1864"
      y2="1864"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1887"
      y2="1887"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1910"
      y2="1910"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1933"
      y2="1933"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1956"
      y2="1956"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="1979"
      y2="1979"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2002"
      y2="2002"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2025"
      y2="2025"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2048"
      y2="2048"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2071"
      y2="2071"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2094"
      y2="2094"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2117"
      y2="2117"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2140"
      y2="2140"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2163"
      y2="2163"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2186"
      y2="2186"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2209"
      y2="2209"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2232"
      y2="2232"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2255"
      y2="2255"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2278"
      y2="2278"
    />
  </g>
  <g
    opacity="1"
  >
    <line
      class="stroke-slate-100 stroke-1"
      x1="0"
      x2="6"
      y1="2301"
      y2="2301"
    />
  </g>
</DocumentFragment>
`;
